--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "mogodb": "^0.0.1-security",
     "node-persist": "^3.1.0"
   }
 }
