--- a/backend/package.json
+++ b/backend/package.json
@@ -19,8 +19,10 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mogodb": "^0.0.1-security",
+    "mongoose": "^6.7.2",
     "node-persist": "^3.1.0"
   }
 }
